# Vietnamese-Legal-NLP

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  projectstructure.txt  pyproject.toml  requirements.txt
api/: config.py  main.py  routes.py  schemas.py
configs/: app_config.yaml  model_config.yaml
data/: annotated_raw.json  segment_raw.json
data/annotated/: intent_test.json  intent_train.json  ner_test.json  ner_train.json  segment_test.json  segment_train.json  srl_test.json  srl_train.json
data/processed/: 300-mau-hop-dong-cua-nhieu-linh-vuc-thong-dung-nhat-2-2.txt  Hop-dong-dich-vu-quang-cao-1.txt  a.txt  hop_dong_cho_thue_lai.txt  hop_dong_cho_thue_nhan_vien.txt  hop_dong_chuyen_nhuong_co_phan.txt  hop_dong_cung_cap_dich_vu_email_marketing.txt  hop_dong_cung_cap_phan_mem_quan_ly_nha_nuoc.txt  hop_dong_dich_vu_cap_nuoc.txt  hop_dong_dich_vu_tu_van_va_phap_ly.txt  hop_dong_gia_cong_co_khi.txt  hop_dong_giang_day.txt  hop_dong_giao_khoan.txt  hop_dong_goi_thau_cung_cap_dich_vu.txt  hop_dong_kinh_te_quoc_te_song_ngu.txt  hop_dong_lao_dong.txt  (+20 more)
input/: raw_contracts.txt
latex/: citations.bib  main.aux  main.bbl  main.blg  main.out  main.run.xml  main.tex  main.toc
output/: chunks.txt  clauses.txt  dependency.json  intent_classification.txt  ner_results.json  srl_results.json
scripts/: auto_annotate.py  build_vector_store.py  check_db.py  check_stats.py  clean_raw_docs.py  evaluate_intent.py  evaluate_ner.py  evaluate_segmenter.py  evaluate_srl.py  generate_report.py  setup_env.sh  train_intent.py  train_ner.py  train_segmenter.py  train_srl.py  validate_annotate.py  validate_segment.py
tests/: test_api.py  test_extraction.py  test_preprocessing.py  test_qa.py  test_segmenter_regression.py
ui/: app.py
(+97 files in other folders)
