[tool.poetry]
name = "vietnamese-legal-nlp"
version = "0.1.0"
description = "Vietnamese Legal Contract NLP & RAG Pipeline"
authors = ["Nguyễn Văn Đức <duc.nguyenvan13475@hcmut.edu.vn>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
streamlit = "^1.26.0"
underthesea = "^6.8.0"
transformers = "^4.33.1"
torch = "^2.0.1"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
google-genai = "^1.0.0"
langchain-google-genai = "^1.0.0"
langchain-huggingface = "^0.0.3"
langchain-chroma = "^0.1.1"
chromadb = "^0.4.10"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.0"
seqeval = "^1.2.2"
datasets = "^2.14.5"
pypdf = "^4.1.0"
python-docx = "^1.1.0"
python-multipart = "^0.0.9"
aspose-words = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"